src/objects/Credentialing_Comments_History__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Credentialing Comments History</relationshipLabel>
        <relationshipName>Credentialing_Comments_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Credentialing Comments History</relationshipLabel>
        <relationshipName>Credentialing_Comments_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Comments_History__c</fullName>
        <label>Comments History</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Cred_Cycle__c</fullName>
        <label>Cred Cycle</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Cred_Status_Date__c</fullName>
        <label>Cred Status Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Cred_Status_Time_Stamp__c</fullName>
        <description>Cred Status Time Stamp Refer the PPN-41284</description>
        <label>Cred Status Date/Time</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cred_Status__c</fullName>
        <label>Cred Status</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Re_Cred_Date__c</fullName>
        <description>Used to capture the history</description>
        <label>Re-Cred Date</label>
        <type>Date</type>
    </fields>
    <label>Credentialing Comments History</label>
    <nameField>
        <displayFormat>C-{00000}</displayFormat>
        <label>Credentialing Comments History Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Credentialing Comments History</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>